--- a/Meu site/bio.html
+++ b/Meu site/bio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<link href="css/meu-site.css" rel="stylesheet">
+	<link href="css/site.css" rel="stylesheet">
 	<meta charset="utf-8"/>
   
 	<title>Biografia - Gretchen</title>
