--- a/Meu site/bio.html
+++ b/Meu site/bio.html
@@ -7,7 +7,7 @@
 	<title>Biografia - Gretchen</title>
   
 	<link rel="stylesheet" type="text/css" href="site.css">
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
