--- a/Meu site/bio.html
+++ b/Meu site/bio.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<link href="css/site.css" rel="stylesheet">
+	<link href="./css/site.css" rel="stylesheet">
 	<meta charset="utf-8"/>
   
 	<title>Biografia - Gretchen</title>
   
-	<link rel="stylesheet" type="text/css" href="site.css">
+	<link rel="stylesheet" type="text/css" href="./css/site.css">
 	<link rel="shortcut icon" href="./imagens/favicon.ico" type="image/x-icon" />
 </head>
 
