--- a/Meu site/bio.html
+++ b/Meu site/bio.html
@@ -3,7 +3,6 @@
 <html lang="pt-br">
 
 <head>
-	<link href="IFSP/meu-site.css" rel="stylesheet">
 	<meta charset="utf-8"/>
 	<title>Biografia - Gretchen</title>
 	<link rel="stylesheet" type="text/css" href="./css/site.css">
@@ -17,6 +16,7 @@
 	<a href="#how_worked">Como trabalhou</a><br>
 	<a href="#experiences">Experiências</a><br>
 	<a href="#more">Saiba mais</a><br>
+	<a href="#more">Memes</a><br>
 		
 	<h2 id="how_worked">Como trabalhou:</h2>
 		<p>É uma cantora, dançarina e empresária brasileira. Desde 2010 se tornou uma <strong>notável</strong> personalidade da televisão ao participar de diversos <em>reality shows</em>.</p>
