--- a/Meu site/bio.html
+++ b/Meu site/bio.html
@@ -39,10 +39,10 @@
 
   	<h2>Memes:</h2>
 		<img width="300px" height="300px" align="right" src="./Imagens/meme 1.jpg"/>
-		<img width="300px" height="300px" align="right" src="./Imagens/meme 2.jpg"/>
-		<img width="300px" height="300px" align="right" src="./Imagens/meme 3.jpg"/>
+		<img width="300px" height="300px" align="center" src="./Imagens/meme 2.jpg"/>
+		<img width="300px" height="300px" align="left" src="./Imagens/meme 3.jpg"/>
   
-	<br>
+	<br><br>
 
 	<h2 id="more">Saiba mais:</h2>
 		<p>Para mais informações, acesse o Wikipedia do nosso ícone <a href ="https://pt.wikipedia.org/wiki/Gretchen" target="_blank">aqui</a>! </p>
