--- a/Meu site/bio.html
+++ b/Meu site/bio.html
@@ -15,8 +15,8 @@
 	
 	<a href="#how_worked">Como trabalhou</a><br>
 	<a href="#experiences">Experiências</a><br>
+	<a href="#memes">Memes</a><br>
 	<a href="#more">Saiba mais</a><br>
-	<a href="#more">Memes</a><br>
 		
 	<h2 id="how_worked">Como trabalhou:</h2>
 		<p>É uma cantora, dançarina e empresária brasileira. Desde 2010 se tornou uma <strong>notável</strong> personalidade da televisão ao participar de diversos <em>reality shows</em>.</p>
@@ -38,8 +38,8 @@
 <br>
 
   	<h2>Memes:</h2>
-		<img width="300px" height="300px" align="right" src="./Imagens/meme 1.jpg"/>
-		<img width="300px" height="300px" align="center" src="./Imagens/meme 2.jpg"/>
+		<img width="300px" height="300px" align="right" src="./Imagens/meme 1.jpg"/><br>
+		<img width="300px" height="300px" align="center" src="./Imagens/meme 2.jpg"/><br>
 		<img width="300px" height="300px" align="left" src="./Imagens/meme 3.jpg"/>
   
 	<br><br>
