--- a/Meu site/bio2.html
+++ b/Meu site/bio2.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8"/>
 	<title>Site - Emilia Clarke</title>
 	<link rel="stylesheet" type="text/css" href="site.css">
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="./Imagens/favicon2.ico" type="image/x-icon" />
 </head>
 
 <body>
@@ -115,22 +115,22 @@
         <p>
             <a href="https://www.instagram.com/emilia_clarke/">
             <div align="center">
-            <img src="insta.png" width="50px" height="50px" class="media-object img-responsive img-thumbnail"></a>
+            <img src="./Imagens/insta.png" width="50px" height="50px" class="media-object img-responsive img-thumbnail"></a>
 
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             
             <a href="https://twitter.com/emiliaclarke?lang=pt">
-            <img src="twitter.png" width="50px" height="50px" class="media-object img-responsive img-thumbnail">
+            <img src="./Imagens/twitter.png" width="50px" height="50px" class="media-object img-responsive img-thumbnail">
             </div>
             </a>
         </p>
 
     <h2 id="photos">Fotos:</h2>
         <p>
-             <img width="710px" height="500px" src="emilia1.jpg" title="Emilia Clarke"/>
-             <img width="710px" height="500px" src="emilia2.jpg" title="Emilia Clarke como Daenerys Targaryen"/><br>
-             <img width="710px" height="400px" src="emilia4.jpg" title="Emilia Clarke como Daenerys Targaryen"/>
-             <img width="710px" height="400px" src="emilia3.jpg" title="Emilia Clarke no Oscar"/>
+             <img width="710px" height="500px" src="./Imagens/emilia1.jpg" title="Emilia Clarke"/>
+             <img width="710px" height="500px" src="./Imagens/emilia2.jpg" title="Emilia Clarke como Daenerys Targaryen"/><br>
+             <img width="710px" height="400px" src="./Imagens/emilia4.jpg" title="Emilia Clarke como Daenerys Targaryen"/>
+             <img width="710px" height="400px" src="./Imagens/emilia3.jpg" title="Emilia Clarke no Oscar"/>
         </p>
 
         <footer id="copyright">
