--- a/Meu site/bio2.html
+++ b/Meu site/bio2.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>Site - Emilia Clarke</title>
-	<link rel="stylesheet" type="text/css" href="site.css">
+	<link rel="stylesheet" type="text/css" href="./css/site2.css">
 	<link rel="shortcut icon" href="./Imagens/favicon2.ico" type="image/x-icon" />
 </head>
 
