--- a/Meu site/bio1.html
+++ b/Meu site/bio1.html
@@ -5,8 +5,8 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>Biografia - Gretchen</title>
-	<link rel="stylesheet" type="text/css" href="./css/site.css">
-	<link rel="shortcut icon" href="./Imagens/favicon.ico" type="image/x-icon" />
+	<link rel="stylesheet" type="text/css" href="./css/site1.css">
+	<link rel="shortcut icon" href="./Imagens/favicon1.ico" type="image/x-icon" />
 </head>
 
 <body>
