--- a/Meu site/bio4.html
+++ b/Meu site/bio4.html
@@ -5,10 +5,10 @@
 <head>
 	<meta charset="utf-8"/>
     <title>Site - Emilia Clarke</title>
-    <link rel="stylesheet" type="text/css" href="reset.css">
-    <link rel="stylesheet" type="text/css" href="site4.css">
-    <link rel="stylesheet" type="text/css" href="form.css">
-	<link rel="shortcut icon" href="favicon2.ico" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="./css/reset.css">
+    <link rel="stylesheet" type="text/css" href="./css/site4.css">
+    <link rel="stylesheet" type="text/css" href="./css/form.css">
+	<link rel="shortcut icon" href="./Imagens/favicon2.ico" type="image/x-icon" />
 </head>
 
 <body class="grid-container">
@@ -191,10 +191,10 @@
 
     <br><h2 id="photos">Fotos:</h2><br>
         <p>
-             <img width="710px" height="500px" src="emilia1.jpg" title="Emilia Clarke"/>
-             <img width="710px" height="500px" src="emilia2.jpg" title="Emilia Clarke como Daenerys Targaryen"/><br>
-             <img width="710px" height="400px" src="emilia4.jpg" title="Emilia Clarke como Daenerys Targaryen"/>
-             <img width="710px" height="400px" src="emilia3.jpg" title="Emilia Clarke no Oscar"/>
+             <img width="710px" height="500px" src="./Imagens/emilia1.jpg" title="Emilia Clarke"/>
+             <img width="710px" height="500px" src="./Imagens/emilia2.jpg" title="Emilia Clarke como Daenerys Targaryen"/><br>
+             <img width="710px" height="400px" src="./Imagens/emilia4.jpg" title="Emilia Clarke como Daenerys Targaryen"/>
+             <img width="710px" height="400px" src="./Imagens/emilia3.jpg" title="Emilia Clarke no Oscar"/>
         </p><br>
     
     <h2 id="social">Redes Sociais:</h2><br>
