--- a/Meu site/bio4.html
+++ b/Meu site/bio4.html
@@ -16,8 +16,8 @@
         <header><h1 id="begin">Emilia Clarke</h1></header>
             <nav id="menu">
                 <ul>
-                    <li><a href="#begin">Início</a><li>
-                    <li><a href="#resume">Resumo</a><li>
+                    <li><a href="#begin">Início</a></li>
+                    <li><a href="#resume">Resumo</a></li>
                     <li><a href="#biography">Biografia</a></li>
                     <li><a href="#career">Carreira</a></li>
                     <li><a href="#life">Vida Pessoal</a></li>
@@ -26,7 +26,7 @@
                     <li><a href="#photos">Fotos</a></li>
                     <li><a href="#social">Redes Sociais</a></li>
                     <li><a href="#contact">Contato</a></li>
-            </nav>
+                </ul></nav>
     </aside>
 
     <main><br><div><p id="resume">
@@ -100,7 +100,7 @@
     </p></div>
 
     <br><h2 id="filmography">Filmografia:</h2><br>
-    <div><center><table>
+    <div><table>
         <thead> 
             <tr>
                 <th> Ano </th> 
@@ -176,7 +176,7 @@
                 <td> Kate </td>
             </tr>
         </tbody>
-    </table></center></div><br>
+    </table></div><br>
 
     <h2 id="blog">Blog:</h2><br>
         <article>
@@ -187,7 +187,39 @@
                 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen></iframe>
             </p> 
+        </article>
+        <br>
+        <br>
+        <article>
+            <em><h2>&nbsp;&nbsp;&nbsp;&nbsp;Castelo Doune - Castelo de Winterfell:</h2></em><br>
+            <datatime>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;18 de Setembro de 2019</datatime>
+            <p><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O castelo de Doune fica localizado na Escócia, próximo a aldeira de Doune<br><br>
+                &nbsp;&nbsp;&nbsp;<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8881.500025991238!2d-4.0499462!3d56.1851961!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5599d30a61b7fb39!2sCastelo%20de%20Doune!5e0!3m2!1spt-BR!2sbr!4v1569977080716!5m2!1spt-BR!2sbr" 
+                width="700" height="394" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            </p> 
+        </article>
+        <br>
+        <br>   
+        <article>
+            <em><h2>&nbsp;&nbsp;&nbsp;&nbsp;Emilia em jogo de basquete:</h2></em><br>
+            <datatime>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;11 de Maio de 2019</datatime>
+            <p><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Emília Clarke é reconhecida em jogo de basquete:<br><br>
+                &nbsp;&nbsp;&nbsp;<video width="700" height="394" controls>
+                    <source src="Media/emilia_basquete.mp4" type="video/mp4">
+                    </video>
+            </p> 
         </article>   
+        <br>
+        <br>
+        <article>
+            <em><h2>&nbsp;&nbsp;&nbsp;&nbsp;Tema de abertura Game of Thrones</h2></em><br>
+            <datatime>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;14 de Abril de 2019</datatime>
+            <br><br><br>
+                &nbsp;&nbsp;&nbsp;<audio controls>
+                    <source src="Media/got_main_theme.mp3" type="audio/mp3">
+                    </audio>
+        </article>   
+
 
     <br><h2 id="photos">Fotos:</h2><br>
         <p>
@@ -199,7 +231,6 @@
     
     <h2 id="social">Redes Sociais:</h2><br>
         <div><ul class="icones-sociais">
-            <center>
             <li class="instagram">
             <a href="https://www.instagram.com/emilia_clarke/">
             Instagram
@@ -208,7 +239,7 @@
             <li class="twitter">
             <a href="https://twitter.com/emiliaclarke?lang=pt">
             Twitter
-            </a> </li></center>
+            </a></li>
         </ul></div>
 
     <br><h2 id="contact">Contato:</h2><br>
@@ -242,7 +273,7 @@
             <textarea name="message" cols="20" rows="4" placeholder="Sua mensagem..."></textarea><br><br>
             <input type="submit" name="send" value="Enviar"/>
         </div>
-    </form></div></main>
+        </fieldset></form></div></main>
 
         <footer id="copyright">
             &copy; Copyright 2019 Lucas Ferreira
