--- a/Meu site/bio5.html
+++ b/Meu site/bio5.html
@@ -5,9 +5,9 @@
 <head>
 	<meta charset="utf-8"/>
     <title>Site - Emilia Clarke</title>
-    <link rel="stylesheet" type="text/css" href="reset.css">
-	<link rel="stylesheet" type="text/css" href="site5.css">
-	<link rel="shortcut icon" href="favicon2.ico" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="./css/reset.css">
+	<link rel="stylesheet" type="text/css" href="./css/site5.css">
+	<link rel="shortcut icon" href="./Imagens/favicon2.ico" type="image/x-icon" />
 </head>
 
 <body class="grid-container">
@@ -128,10 +128,10 @@
             
         <br><h2 id="photos">Fotos:</h2><br>
         <p>
-             <div class="imagemum"><img width="710px" height="500px" src="emilia1.jpg" title="Emilia Clarke"/></div>
-             <div class="imagemdois"><img width="710px" height="500px" src="emilia2.jpg" title="Emilia Clarke como Daenerys Targaryen"/><br></div>
-             <div class="imagemum"><img width="710px" height="400px" src="emilia4.jpg" title="Emilia Clarke como Daenerys Targaryen"/></div>
-             <div class="imagemdois"><img width="710px" height="400px" src="emilia3.jpg" title="Emilia Clarke no Oscar"/></div>
+             <div class="imagemum"><img width="710px" height="500px" src="./Imagens/emilia1.jpg" title="Emilia Clarke"/></div>
+             <div class="imagemdois"><img width="710px" height="500px" src="./Imagens/emilia2.jpg" title="Emilia Clarke como Daenerys Targaryen"/><br></div>
+             <div class="imagemum"><img width="710px" height="400px" src="./Imagens/emilia3.jpg" title="Emilia Clarke como Daenerys Targaryen"/></div>
+             <div class="imagemdois"><img width="710px" height="400px" src="./Imagens/emilia4.jpg" title="Emilia Clarke no Oscar"/></div>
         </p><br></main>
 
         <footer id="copyright">
