--- a/Meu site/bio5.html
+++ b/Meu site/bio5.html
@@ -6,24 +6,27 @@
 	<meta charset="utf-8"/>
     <title>Site - Emilia Clarke</title>
     <link rel="stylesheet" type="text/css" href="./css/reset.css">
-	<link rel="stylesheet" type="text/css" href="./css/site5.css">
+    <link rel="stylesheet" type="text/css" href="./css/site4.css">
+    <link rel="stylesheet" type="text/css" href="./css/form.css">
 	<link rel="shortcut icon" href="./Imagens/favicon2.ico" type="image/x-icon" />
 </head>
 
 <body class="grid-container">
     <aside>
         <header><h1 id="begin">Emilia Clarke</h1></header>
-            <nav id="menu" class="menu">
+            <nav id="menu">
                 <ul>
-                    <li><a href="#begin">Início</a><li>
-                    <li><a href="#resume">Resumo</a><li>
+                    <li><a href="#begin">Início</a></li>
+                    <li><a href="#resume">Resumo</a></li>
                     <li><a href="#biography">Biografia</a></li>
                     <li><a href="#career">Carreira</a></li>
                     <li><a href="#life">Vida Pessoal</a></li>
-                    <li><a href="#filmography">Filmografia</a></li>                    
-                    <li><a href="#social">Redes Sociais</a></li>
+                    <li><a href="#filmography">Filmografia</a></li>
+                    <li><a href="#blog">Blog</a></li>                
                     <li><a href="#photos">Fotos</a></li>
-            </nav>
+                    <li><a href="#social">Redes Sociais</a></li>
+                    <li><a href="#contact">Contato</a></li>
+                </ul></nav>
     </aside>
 
     <main><br><div><p id="resume">
@@ -96,25 +99,138 @@
         </blockquote>
     </p></div>
 
-	<br><h2 id="filmography">Filmografia:</h2><br>
-		<div><ul>
-            <li><em>2009</em> ➝	Doctors</li>
-            <li><em>2010</em> ➝	Triassic Attack</li>
-            <li><em>2012</em> ➝	Shackled</li>
-            <li><em>2012</em> ➝	Spike Island</li>
-            <li><em>2013</em> ➝	Futurama</li>
-			<li><em>2013</em> ➝	Dom Hemingway</li>
-			<li><em>2015</em> ➝	Terminator Genisys</li>
-            <li><em>2016</em> ➝	Me Before You</li>        
-            <li><em>2016</em> ➝	Robot Chicken</li>    
-			<li><em>2017</em> ➝	Voice from the Stone</li>
-            <li><em>2018</em> ➝	Solo: A Star Wars Story</li>
-            <li><em>2011-2019</em> ➝ Game of Thrones</li>
-		</ul></div>
+    <br><h2 id="filmography">Filmografia:</h2><br>
+    <div><table>
+        <thead> 
+            <tr>
+                <th> Ano </th> 
+                <th> Série/Filme </th> 
+                <th> Personagem </th>
+            </tr>
+        </thead>
 
-        <br><h2 id="social">Redes Sociais:</h2><br>
+        <tbody> 
+            <tr>
+                <td> 2009 </td>
+                <td> Doctors </td>
+                <td> Saskia Mayer </td>
+            </tr> 
+            <tr>
+                <td> 2010 </td> 
+                <td> Triassic Attack </td>
+                <td> Savannah </td>
+            </tr>
+            <tr>
+                <td> 2012 </td> 
+                <td> Shackled </td>
+                <td> Malu </td>
+            </tr>
+            <tr>
+                <td> 2012 </td> 
+                <td> Spike Island </td>
+                <td> Sally </td>
+            </tr>
+            <tr>
+                <td> 2013 </td> 
+                <td> Futurama </td>
+                <td> Marianne </td>
+            </tr>
+            <tr>
+                <td> 2013 </td> 
+                <td> Dom Hemingway </td>
+                <td> Evelyn </td>
+            </tr>
+            <tr>
+                <td> 2015 </td> 
+                <td> Terminator Genisys </td>
+                <td> Sarah Connor </td>
+            </tr>
+            <tr>
+                <td> 2016 </td> 
+                <td> Me Before You </td>
+                <td> Louisa Clark </td>
+            </tr>
+            <tr>
+                <td> 2016 </td> 
+                <td> Robot Chicken </td>
+                <td> Bridget </td>
+            </tr>
+            <tr>
+                <td> 2017 </td> 
+                <td> Voice from the Stone </td>
+                <td> Verena </td>
+            </tr>
+            <tr>
+                <td> 2018 </td> 
+                <td> Solo: A Star Wars Story </td>
+                <td> QI'ra </td>
+            </tr>
+            <tr>
+                <td> 2011-2019 </td> 
+                <td> Game of Thrones </td>
+                <td> Daenerys Targaryen </td>
+            </tr>
+            <tr>
+                <td> 2019 </td> 
+                <td> Last Christmas </td>
+                <td> Kate </td>
+            </tr>
+        </tbody>
+    </table></div><br>
+
+    <h2 id="blog">Blog:</h2><br>
+        <article>
+            <em><h2>&nbsp;&nbsp;&nbsp;&nbsp;Homenagem à Daenerys Targaryen:</h2></em><br>
+            <datatime>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;29 de Setembro de 2019</datatime>
+            <p><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Vídeo sobre a trajetória deste personagem:<br><br>
+                &nbsp;&nbsp;&nbsp;<iframe width="700" height="394" src="https://www.youtube.com/embed/7I4LUKNwlyY" 
+                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen></iframe>
+            </p> 
+        </article>
+        <br>
+        <br>
+        <article>
+            <em><h2>&nbsp;&nbsp;&nbsp;&nbsp;Castelo Doune - Castelo de Winterfell:</h2></em><br>
+            <datatime>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;18 de Setembro de 2019</datatime>
+            <p><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O castelo de Doune fica localizado na Escócia, próximo a aldeira de Doune<br><br>
+                &nbsp;&nbsp;&nbsp;<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8881.500025991238!2d-4.0499462!3d56.1851961!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5599d30a61b7fb39!2sCastelo%20de%20Doune!5e0!3m2!1spt-BR!2sbr!4v1569977080716!5m2!1spt-BR!2sbr" 
+                width="700" height="394" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            </p> 
+        </article>
+        <br>
+        <br>   
+        <article>
+            <em><h2>&nbsp;&nbsp;&nbsp;&nbsp;Emilia em jogo de basquete:</h2></em><br>
+            <datatime>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;11 de Maio de 2019</datatime>
+            <p><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Emília Clarke é reconhecida em jogo de basquete:<br><br>
+                &nbsp;&nbsp;&nbsp;<video width="700" height="394" controls>
+                    <source src="Media/emilia_basquete.mp4" type="video/mp4">
+                    </video>
+            </p> 
+        </article>   
+        <br>
+        <br>
+        <article>
+            <em><h2>&nbsp;&nbsp;&nbsp;&nbsp;Tema de abertura Game of Thrones</h2></em><br>
+            <datatime>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;14 de Abril de 2019</datatime>
+            <br><br><br>
+                &nbsp;&nbsp;&nbsp;<audio controls>
+                    <source src="Media/got_main_theme.mp3" type="audio/mp3">
+                    </audio>
+        </article>   
+
+
+    <br><h2 id="photos">Fotos:</h2><br>
+        <p>
+             <img width="710px" height="500px" src="./Imagens/emilia1.jpg" title="Emilia Clarke"/>
+             <img width="710px" height="500px" src="./Imagens/emilia2.jpg" title="Emilia Clarke como Daenerys Targaryen"/><br>
+             <img width="710px" height="400px" src="./Imagens/emilia4.jpg" title="Emilia Clarke como Daenerys Targaryen"/>
+             <img width="710px" height="400px" src="./Imagens/emilia3.jpg" title="Emilia Clarke no Oscar"/>
+        </p><br>
+    
+    <h2 id="social">Redes Sociais:</h2><br>
         <div><ul class="icones-sociais">
-            <center>
             <li class="instagram">
             <a href="https://www.instagram.com/emilia_clarke/">
             Instagram
@@ -123,16 +239,41 @@
             <li class="twitter">
             <a href="https://twitter.com/emiliaclarke?lang=pt">
             Twitter
-            </a> </li></center>
+            </a></li>
         </ul></div>
-            
-        <br><h2 id="photos">Fotos:</h2><br>
-        <p>
-             <div class="imagemum"><img width="710px" height="500px" src="./Imagens/emilia1.jpg" title="Emilia Clarke"/></div>
-             <div class="imagemdois"><img width="710px" height="500px" src="./Imagens/emilia2.jpg" title="Emilia Clarke como Daenerys Targaryen"/><br></div>
-             <div class="imagemum"><img width="710px" height="400px" src="./Imagens/emilia3.jpg" title="Emilia Clarke como Daenerys Targaryen"/></div>
-             <div class="imagemdois"><img width="710px" height="400px" src="./Imagens/emilia4.jpg" title="Emilia Clarke no Oscar"/></div>
-        </p><br></main>
+
+    <br><h2 id="contact">Contato:</h2><br>
+    <div id="area">
+    <form id="formulario" autocomplete="off">
+        <fieldset>
+        <div>
+            <legend>DETALHES DE CONTATO</legend><br>
+        </div>
+        <div>
+            <label for="nome">Nome:</label><br><br>
+            <input type="text" name="your name" size="15" maxlength="30"  placeholder="Seu nome" autofocus required/>
+        </div> 
+        <div><br>
+            <label for="e-mail">E-mail:</label><br><br>
+            <input type="text" name="your e-mail" size="15" maxlength="30"  placeholder="Seu e-mail" required/> 
+        </div>
+        </fieldset>
+        <fieldset>
+        <div>
+            <br><br><legend>DETALHES DA MENSAGEM</legend><br>
+        </div>
+        <div>
+            <label for="subject">Assunto:</label><br><br>
+            <input type="radio" name="genre" value="opinion" checked="checked" /> Opinião&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <input type="radio" name="genre" value="errata" /> Errata&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <input type="radio" name="genre" value="update" /> Atualização
+        </div>
+        <div><br>
+            <label for="message">Mensagem:</label><br><br>
+            <textarea name="message" cols="20" rows="4" placeholder="Sua mensagem..."></textarea><br><br>
+            <input type="submit" name="send" value="Enviar"/>
+        </div>
+        </fieldset></form></div></main>
 
         <footer id="copyright">
             &copy; Copyright 2019 Lucas Ferreira
